Short index page benefit text

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@ Home
 
   <div class="row" style="margin-top: 2em">
     <div class="col-md-6">
-			<p>Stop suffering and start answering simple questions with your teammates. We'll help you track down security risks, guide you through implementing controls, and prepare compliance documents.</p>
+			<p>Stop suffering and start answering simple questions with your teammates. We'll help you identify security risks, learn compliance controls, and prepare required documents.</p>
 
       {% if not has_projects %}
       <p><a class="btn btn-success btn-lg" role="button" href="/new-project">Start a New Project/System &raquo;</a></p>
