--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{# for allauth login #}
+{% load bootstrap3 %}
+{% load i18n %}
+{% load account %}
+
 {% block title %}
 Home
 {% endblock %}
@@ -37,10 +42,12 @@ Home
     <div class="col-md-6">
 			<p>Stop suffering and start answering simple questions with your teammates. We'll help you identify security risks, learn compliance controls, and prepare required documents.</p>
 
+      {% if request.user.is_authenticated %}
       {% if not has_projects %}
       <p><a class="btn btn-success btn-lg" role="button" href="/new-project">Start a New Project/System &raquo;</a></p>
       {% else %}
       <p><a class="btn btn-success btn-lg" role="button" href="/projects">View Your Projects/Systems &raquo;</a></p>
+      {% endif %}
       {% endif %}
 
     </div>
@@ -48,9 +55,42 @@ Home
 
 
 		<div class="col-md-6">
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/F5QN28WGTbs"></iframe>
-      </div>
+      {% if request.user.is_authenticated %}
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/F5QN28WGTbs"></iframe>
+        </div>
+      {% else %}
+        <div style="border: 1px solid #DDD; padding: 1em; background-color: white;">
+          <h3 style="margin-top: 0; font-weight: bold;">{% trans "Sign In" %}</h3>
+
+          {% if socialaccount.providers  %}
+          <p>{% blocktrans with site.name as site_name %}Please sign in with one
+          of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a> 
+          for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
+
+          <div class="socialaccount_ballot">
+
+            <ul class="socialaccount_providers">
+              {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+            </ul>
+
+            <div class="login-or">{% trans 'or' %}</div>
+
+          </div>
+
+          {% include "socialaccount/snippets/login_extra.html" %}
+
+          {% endif %}
+
+          <form class="login" method="POST" action="{% url 'account_login' %}">
+            {% csrf_token %}
+            {% bootstrap_form login_form %}
+            <input type="hidden" name="next" value="{{request.GET.next}}" />
+            <p><button type="submit" class="primaryAction btn btn-success">{% trans "Sign In" %}</button></p>
+            <div><a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a></div>
+          </form>
+        </div>
+      {% endif %}
 		</div>
 
 	</div>
