in the UI rename Projects/Systems to Assessments
export_button_label is now no longer an option since everything is an Assessment, there's no ambiguity between Project/System

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a href="/">Home</a></li>
-                <li><a href="/projects">Projects/Systems</a></li>
+                <li><a href="/projects">Assessments</a></li>
                 {% if user.can_see_org_settings or user.is_staff %}
                   <li role="separator" class="divider"></li>
                 {% endif %}
