--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,9 @@ Home
 
       {% if request.user.is_authenticated %}
       {% if not has_projects %}
-      <p><a class="btn btn-success btn-lg" role="button" href="/new-project">Start a New Project/System &raquo;</a></p>
+      <p><a class="btn btn-success btn-lg" role="button" href="/new-project">Begin an Assessment &raquo;</a></p>
       {% else %}
-      <p><a class="btn btn-success btn-lg" role="button" href="/projects">View Your Projects/Systems &raquo;</a></p>
+      <p><a class="btn btn-success btn-lg" role="button" href="/projects">View Assessments &raquo;</a></p>
       {% endif %}
       {% endif %}
 
