--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -81,7 +81,7 @@ thead {
         {% if task.project.is_account_project %}
           {# there is nothing else in the account settings project #}
           <p><a id="return-to-projects" href="/projects" class="btn btn-success">
-            Return to Projects &raquo;
+            Return to Assessments &raquo;
           </a></p>
         {% else %}
           {# return to project #}
