--- a/templates/question.html
+++ b/templates/question.html
@@ -714,7 +714,7 @@ function show_static_history(history) {
 function invite_user_to_discussion() {
   show_invite_modal(
     'Invite to Discussion',
-    'Invite a colleague to join the discussion. They will be a guest of this discussion if they are not added to the project team.',
+    'Invite a colleague to join the discussion. They will be a guest of this discussion if they are not added to the assessment team.',
     {{send_invitation|json}},
     'Please join our discussion about ' + discussion_info.title + ' in ' + discussion_info.project.title + '.',
     {
